--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "rollup": "^2.46.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^7.0.2",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2"
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "typescript": "^4.3.5"
   },
   "files": [
     "/dist"
